<resources>
    <string name="app_name">Nova Era</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="priceTxt">Price (CL) :</string>
    <string name="price">price</string>
    <string name="skuTxt">SKU :</string>
    <string name="productName">Product Name</string>
    <string name="sku">00</string>
    <string name="detailName">product</string>
    <string name="detailDesc">Description</string>
    <string name="priceNow">price now</string>
    <string name="priceLast">price last</string>
    <string name="detailCredit">Credit</string>
    <string name="imgProduct">Product Image</string>
    <string name="imgBlock">Block Img</string>
    <string name="titDesc1">Descripción</string>
    <string name="titDesc2">Precio Oferta:</string>
    <string name="emailTxt">Contactar área de ventas</string>
    <string name="creditCard">Acepta Crédito</string>
    <string name="cash">Sólo Efectivo</string>

</resources>